DigicielFull/force-app/main/default/objects/gnx__Document_template_dependence__c/gnx__Document_template_dependence__c.object-meta.xml
<CustomObject>
    <label>Document template dependence</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document template dependences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>