DigicielFull/force-app/main/default/objects/gnx__Document_template_dependence__c/fields/gnx__Main_object_condition__c.field-meta.xml
<CustomField>
    <fullName>gnx__Main_object_condition__c</fullName>
    <description>Condition on main object of main template, If the condition is true, the associate template linked to this dependence is added to the main document</description>
    <inlineHelpText>Condition sur l&apos;objet princpal, si cette condition est vraie ou le champ vide, le document associé est ajoutée au document principal</inlineHelpText>
    <label>Main object condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>