DigicielFull/force-app/main/default/objects/gnx__Document_template_dependence__c/fields/gnx__Main_template__c.field-meta.xml
<CustomField>
    <fullName>gnx__Main_template__c</fullName>
    <label>Main template</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipLabel>Document template dependences</relationshipLabel>
    <relationshipName>Main_templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>