DigicielFull/force-app/main/default/objects/gnx__Document_template_dependence__c/fields/gnx__Order__c.field-meta.xml
<CustomField>
    <fullName>gnx__Order__c</fullName>
    <description>Position of the associate document in the generated file.</description>
    <inlineHelpText>Position du modèle associé dans le document final</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>